# kubernetes-resource-app

./: Cargo.toml  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  TODO.md  chat.txt  crd.yaml
.github/workflows/: ci-cd.yml  deploy.yml
deploy/: webhook-manifests.yaml
docs/: FEATURES_SUMMARY.md  confluence-documentation.md
examples/: sample-myapp.yaml
k8s/: deployment.yaml  monitoring.yaml  rbac.yaml
scripts/: deploy.sh  generate-webhook-certs.sh  test-controller.sh
src/: main.rs  metrics.rs  scheduling.rs  scheduling_complex.rs
