[package]
name = "kubernetes-resource-app"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.95", features = ["runtime", "derive", "admission"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
futures = "0.3"
futures-util = "0.3"
json-patch = "2.0"
